# Bank-Account-Simulator

./: .gitignore  Author  BankSystem.h  CMakeLists.txt  README.md  account.h  transaction.h
docs/: checkpoint1_reflection.md  checkpoint1_tests.md  checkpoint2_plan.md  checkpoint2_reflection.md)  checkpoint3 plan.md  checkpoint3 reflection.md  final_reflection.md  implementation_plan.md
include/: account.h  bank.h
src/: account.cpp  bank.cpp  main.cpp
tests/: test_deposit.cpp  test_view_account.cpp  test_withdraw.cpp
